--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
 /*  your css code here. If applicable */
+*{
+  margin: 5px;
+ 
+}
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+header{
+  display: flex;
+  background-color: #011e29;
+  color: white;
+  text-align: center;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+}
+.div-1{
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  padding: 20px;
+  
+}
+
+.div-2{
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: white;
+  width: 50%;
+  height: fit-content;
+  padding: 20px;
+}
+
+.div-3{
+  text-align: center;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: white;
+  width: fit-content;
+  padding: 20px;
+}
+
+div > img{
+  width: 300px;
+  height: 150x;
+}
+body{
+  background-color: #f5f5f5;
+}
